--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,13 @@
       <div class="card-body">
         <div class="form-control">
           <label class="label">
+            <span class="label-text">Nombre Completo</span>
+          </label>
+          <input type="text" placeholder="Nombre" class="input input-bordered"
+            [(ngModel)]="fullname" />
+        </div>
+        <div class="form-control">
+          <label class="label">
             <span class="label-text">Email</span>
           </label>
           <input type="text" placeholder="email" class="input input-bordered"
@@ -19,11 +26,9 @@
           <label class="label">
             <span class="label-text">Password</span>
           </label>
-          <input type="text" placeholder="password" class="input input-bordered"
+          <input type="password" placeholder="password"
+            class="input input-bordered"
             [(ngModel)]="password" />
-          <label class="label">
-            <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
-          </label>
         </div>
         <div class="form-control mt-6">
           <button type="button" class="btn btn-primary" (click)="login()">Login</button>
