Guardando la sesion

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,9 @@
 <div class="navbar bg-base-100">
     <div class="flex-1">
-        <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+        <a class="btn btn-ghost normal-case text-xl">{{fullname}}</a>
     </div>
     <div class="flex-none gap-2">
-        <div class="form-control">
-            <input type="text" placeholder="Search"
-                class="input input-bordered w-24 md:w-auto" />
-        </div>
+
         <div class="dropdown dropdown-end">
             <label tabindex="0" class="btn btn-ghost btn-circle avatar">
                 <div class="w-10 rounded-full">
@@ -23,7 +20,7 @@
                     </a>
                 </li>
                 <li><a>Settings</a></li>
-                <li><a>Logout</a></li>
+                <li><a routerLink="/login">Logout</a></li>
             </ul>
         </div>
     </div>
