--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,7 @@
                         [(ngModel)]="password" />
                 </div>
                 <div class="form-control mt-6">
-                    <button type="button" class="btn btn-primary"
+                    <button class="btn btn-primary"
                         (click)="login()">Login</button>
                 </div>
             </div>
