funcion para el logout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
 <div class="w-1/2 mx-auto">
     <h1 class="text-center text-3xl font-bold">Registro de usuarios que se han
         logueado</h1>
+    <!-- TABLA -->
     <div class="overflow-x-auto">
         <table class="table">
             <!-- head -->
