--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
                     </a>
                 </li>
                 <li><a>Settings</a></li>
-                <li><a routerLink="/login">Logout</a></li>
+                <li><a routerLink="/login" (click)="logout()">Logout</a></li>
             </ul>
         </div>
     </div>
