--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,6 @@
 <div class="w-1/2 mx-auto">
     <h1 class="text-center text-3xl font-bold">Registro de usuarios que se han
         logueado</h1>
-    <!-- TABLA -->
     <div class="overflow-x-auto">
         <table class="table">
             <!-- head -->
@@ -14,9 +13,9 @@
                             <input type="checkbox" class="checkbox" />
                         </label>
                     </th>
-                    <th>Name</th>
-                    <th>Job</th>
-                    <th>Favorite Color</th>
+                    <th>Nombre</th>
+                    <th>Correo</th>
+                    <th>Si</th>
                     <th></th>
                 </tr>
             </thead>
@@ -33,12 +32,12 @@
                             <div class="avatar">
                                 <div class="mask mask-squircle w-12 h-12">
                                     <img
-                                        src="/tailwind-css-component-profile-2@56w.png"
+                                        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png"
                                         alt="Avatar Tailwind CSS Component" />
                                 </div>
                             </div>
                             <div>
-                                <div class="font-bold">Hart Hagerty</div>
+                                <div class="font-bold">{{fullname}}</div>
                                 <div class="text-sm opacity-50">United States</div>
                             </div>
                         </div>
