--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,6 @@
+
 <div class="hero min-h-screen bg-base-200">
+    <app-alert *ngIf="warning"></app-alert>
     <div class="hero-content flex-col lg:flex-row-reverse">
         <div class="text-center lg:text-left">
             <h1 class="text-5xl font-bold">Registrate!</h1>
@@ -34,8 +36,9 @@
                         [(ngModel)]="password" />
                 </div>
                 <div class="form-control mt-6">
-                    <button class="btn btn-primary"
-                        (click)="login()">Login</button>
+                    <button (disabled)="disableLoginButton"
+                        class="btn btn-primary"
+                        (click)="login($event)">Login</button>
                 </div>
             </div>
         </div>
