--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,9 @@
 
 <div class="hero min-h-screen bg-base-200">
+    <!-- *** ALERT  *** -->
     <app-alert *ngIf="warning" [message]="warningMessage"></app-alert>
+    <!-- *** ALERT  *** -->
+
     <div class="hero-content flex-col lg:flex-row-reverse">
         <div class="text-center lg:text-left">
             <h1 class="text-5xl font-bold">Registrate!</h1>
