--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,11 @@
 <div class="navbar bg-base-100">
     <div class="flex-1">
         <a class="btn btn-ghost normal-case text-xl">{{fullname}}</a>
+        <div class="w-full text-center">
+            <span class="text-2xl font-bold">{{textNavbar}}</span>
+        </div>
     </div>
+
     <div class="flex-none gap-2">
 
         <div class="dropdown dropdown-end">
