Agregando vista para registro de usuarios

--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -10,8 +10,9 @@
         <label for="my-drawer" class="drawer-overlay"></label>
         <ul class="menu p-4 w-80 h-full bg-base-200 text-base-content">
             <!-- Sidebar content here -->
-            <li><a>Sidebar Item 1</a></li>
-            <li><a>Sidebar Item 2</a></li>
+            <li><a routerLink="/home">Home</a></li>
+            <li><a routerLink="/registros-api">Listado de Registros</a></li>
+            <li><a>Usuarios Registrados</a></li>
 
         </ul>
     </div>
