--- a/src/app/components/view-registros/view-registros.component.html
+++ b/src/app/components/view-registros/view-registros.component.html
@@ -1,1 +1,54 @@
 <app-navbar [textNavbar]="'Listado de Registros (API)'"></app-navbar>
+
+<div class="w-4/5 mx-auto flex flex-col items-center content-center">
+    <div class="join ">
+        <button class="join-item btn" [disabled]="paginaAcutal===1"
+            (click)="previousPage(paginaAcutal)">
+            «
+        </button>
+        <button class="join-item btn">Page {{paginaAcutal}}</button>
+        <button class="join-item btn"
+            [disabled]="paginaAcutal === paginasTotales"
+            (click)="nextPage(paginaAcutal)">»</button>
+    </div>
+
+    <!-- TABLA DE USUARIOS -->
+    <div class="overflow-x-auto w-3/4 overflow-y-hidden">
+        <table class="table">
+            <!-- head -->
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let u of users">
+                    <td>
+                        <div class="flex items-center space-x-3">
+                            <div class="avatar">
+                                <div class="mask mask-squircle w-12 h-12">
+                                    <img
+                                        [src]="u.picture.medium"
+                                        alt="Avatar Tailwind CSS Component" />
+                                </div>
+                            </div>
+                            <div>
+                                <div class="font-bold">{{u.name.first + ' '
+                                    +
+                                    u.name.last}} </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        {{u.email}}
+                    </td>
+                    <td>{{u.phone}}</td>
+
+                </tr>
+
+            </tbody>
+
+        </table>
+    </div>
