--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -1,4 +1,4 @@
-<div class="drawer">
+<div class="drawer z-20">
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content">
         <!-- Page content here -->
@@ -10,9 +10,10 @@
         <label for="my-drawer" class="drawer-overlay"></label>
         <ul class="menu p-4 w-80 h-full bg-base-200 text-base-content">
             <!-- Sidebar content here -->
-            <li><a routerLink="/home">Home</a></li>
-            <li><a routerLink="/registros-api">Listado de Registros</a></li>
-            <li><a>Usuarios Registrados</a></li>
+            <li><a routerLink="/home"> <i class="fa-solid fa-house"></i>Home</a></li>
+            <li><a routerLink="/registros-api"><i class="fa-solid fa-users-line"></i>Usuarios
+                    (RandomUser)</a></li>
+            <li><a> <i class="fa-solid fa-ghost"></i>Pokemones</a></li>
 
         </ul>
     </div>
