--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -13,7 +13,7 @@
             <li><a routerLink="/home"> <i class="fa-solid fa-house"></i>Home</a></li>
             <li><a routerLink="/registros-api"><i class="fa-solid fa-users-line"></i>Usuarios
                     (RandomUser)</a></li>
-            <li><a> <i class="fa-solid fa-ghost"></i>Pokemones</a></li>
+            <li><a routerLink="/pokemon-api"> <i class="fa-solid fa-ghost"></i>Pokemones</a></li>
 
         </ul>
     </div>
