content para la vista de pokemones

--- a/src/app/components/view-pokemon/view-pokemon.component.html
+++ b/src/app/components/view-pokemon/view-pokemon.component.html
@@ -1,4 +1,4 @@
-<app-navbar [textNavbar]="'Listado de Registros (API)'"></app-navbar>
+<app-navbar [textNavbar]="'Pokemones (API)'"></app-navbar>
 
 <div class="w-4/5 mx-auto flex flex-col items-center content-center">
     hola
