--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -11,9 +11,10 @@
         <ul class="menu p-4 w-80 h-full bg-base-200 text-base-content">
             <!-- Sidebar content here -->
             <li><a routerLink="/home"> <i class="fa-solid fa-house"></i>Home</a></li>
+            <!--<li><a routerLink="/pokemon-api"> <i class="fa-solid fa-house"></i>Home</a></li>-->
+            <li><a routerLink="/pokemon-list"> <i class="fa-solid fa-ghost"></i>Pokemones</a></li>
             <li><a routerLink="/registros-api"><i class="fa-solid fa-users-line"></i>Usuarios
                     (RandomUser)</a></li>
-            <li><a routerLink="/pokemon-api"> <i class="fa-solid fa-ghost"></i>Pokemones</a></li>
 
         </ul>
     </div>
