--- a/src/app/components/view-pokemon/view-pokemon.component.html
+++ b/src/app/components/view-pokemon/view-pokemon.component.html
@@ -1,20 +1,20 @@
-<app-navbar [textNavbar]="'Pokemones (API)'"></app-navbar>
+<app-navbar [textNavbar]="'Bienvenido a API Pokemon'"></app-navbar>
 
 <div
     class="w-4/5 mx-auto flex flex-col items-center content-center ">
-    <div class="mb-5 mt-2 w-64 flex items-center flex-col">
+    <!--<div class="mb-5 mt-2 w-64 flex items-center flex-col">
         <span class="mb-2">pokemones por pagina: {{pokemonesPorPagina}}</span>
-        <input type="range" min="1" max="40"
+        <input type="range" min="1" max="10"
             [value]="pokemonesPorPagina"
             (input)="handlerChangeRangeValue($event)"
             class=" range range-primary range-xs" />
     </div>
-    <pagination-controls (pageChange)="paginaActual= $event"></pagination-controls>
+    <pagination-controls (pageChange)="paginaActual= $event"></pagination-controls>-->
 
     <div class="grid md:grid-cols-4 gap-x-7 gap-y-6 sm:grid-cols-3 mb-10">
         <div
             class="card w-44 bg-info-content shadow-xl bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-40 border border-gray-100 hover:scale-110 ease-in duration-200 "
-            *ngFor="let p of pokemones | paginate: { itemsPerPage: pokemonesPorPagina, currentPage: paginaActual,totalItems: 1000 }">
+            *ngFor="let p of pokemones">
             <figure class="px-10 pt-10">
                 <img [src]="getImageUrl(getId(p))"
                     alt="Shoes" class="rounded-md" />
