--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-navbar [textNavbar]="'Bienvenido a API Pokemon'"></app-navbar>
 
-<!--<div
+<div
     class="w-4/5 mx-auto flex flex-col items-center content-center ">
 
     <div class="grid md:grid-cols-4 gap-x-7 gap-y-6 sm:grid-cols-3 mb-10">
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div>
-</div>-->
+</div>
 <div class="carousel carousel-center rounded-box">
     <div class="carousel-item">
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/175.png" alt="Togepi" />
