--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="navbar bg-base-100">
+<div class="navbar bg-secondary text-primary-conten">
     <div class="navbar-start">
         <app-drawer></app-drawer>
         <a class="normal-case text-xl ml-10">{{fullname ? fullname:
