--- a/src/app/components/view-registros/view-registros.component.html
+++ b/src/app/components/view-registros/view-registros.component.html
@@ -5,7 +5,7 @@
     <pagination-controls (pageChange)="paginaActual= $event"></pagination-controls>
 
     <!-- TABLA DE USUARIOS -->
-    <div class="overflow-x-auto w-3/4 overflow-y-hidden">
+    <div class="overflow-x-auto w-3/4 overflow-y-hidden border-solid">
         <table class="table">
             <!-- head -->
             <thead>
