--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,17 +6,14 @@
 
     <div class="hero-content flex-col lg:flex-row-reverse">
         <div class="text-center lg:text-left">
-            <h1 class="text-5xl font-bold">Registrate!</h1>
-            <p class="py-6">Provident cupiditate voluptatem et in. Quaerat
-                fugiat ut
-                assumenda excepturi exercitationem quasi. In deleniti eaque aut
-                repudiandae et a id nisi.</p>
+            <h1 class="text-5xl font-bold">Ingresa!</h1>
+            <p class="py-6">API Pokemon, ¡¡Muchos pokemones!!</p>
         </div>
         <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
             <div class="card-body">
                 <div class="form-control">
                     <label class="label">
-                        <span class="label-text">Nombre Completo</span>
+                        <span class="label-text">Nombre de usuario</span>
                     </label>
                     <input type="text" placeholder="Nombre"
                         class="input input-bordered"
@@ -24,7 +21,7 @@
                 </div>
                 <div class="form-control">
                     <label class="label">
-                        <span class="label-text">Email</span>
+                        <span class="label-text">Correo Electrónico</span>
                     </label>
                     <input type="text" placeholder="email"
                         class="input input-bordered"
@@ -32,7 +29,7 @@
                 </div>
                 <div class="form-control">
                     <label class="label">
-                        <span class="label-text">Password</span>
+                        <span class="label-text">Contraseña</span>
                     </label>
                     <input type="password" placeholder="password"
                         class="input input-bordered"
@@ -41,9 +38,53 @@
                 <div class="form-control mt-6">
                     <button (disabled)="disableLoginButton"
                         class="btn btn-primary"
-                        (click)="login($event)">Login</button>
+                        (click)="login($event)">Ingresar</button>
                 </div>
+                <button class="btn" onclick="my_modal_3.showModal()">Registrarse</button>
             </div>
         </div>
     </div>
+    <dialog id="my_modal_3" class="modal">
+        <form method="dialog" class="modal-box">
+            <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+
+            <div class="text-center lg:text-left">
+                <h1 class="text-5xl font-bold">Registrate!</h1>
+                <p class="py-6">Rellena todos los campos.</p>
+            </div>
+
+            <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+                <div class="card-body">
+                    <div class="form-control">
+                        <label class="label">
+                            <span class="label-text">Nombre de usuario</span>
+                        </label>
+                        <input type="text" placeholder="nombre" class="input input-bordered"
+                            [(ngModel)]="fullname2"/>
+                    </div>
+                    <div class="form-control">
+                        <label class="label">
+                            <span class="label-text">Email</span>
+                        </label>
+                        <input type="text" placeholder="email" class="input input-bordered"
+                            [(ngModel)]="email2" />
+                    </div>
+                    <div class="form-control">
+                        <label class="label">
+                            <span class="label-text">Contraseña</span>
+                        </label>
+                        <input type="password" placeholder="password" class="input input-bordered"
+                            [(ngModel)]="password2" />
+                    </div>
+                    <div class="form-control mt-6">
+                        <!--<button class="btn btn-primary" (click)="signup()">Sign up</button>-->
+                        <button (disabled)="disableLoginButton"
+                        class="btn btn-primary"
+                        (click)="login($event)">Registrarse</button>
+                    </div>
+
+                </div>
+            </div>
+        </form>
+    </dialog>
 </div>
