--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -11,14 +11,14 @@
         <label for="my-drawer" class="drawer-overlay"></label>
         
         <ul class="menu p-4 w-80 h-full bg-base-200 text-base-content">
-            <li *ngIf="user">
+            <li>
                 <div class="mx-auto flex flex-col items-center content-center">
                     <div class="avatar online">
                         <div class="w-24 rounded-full">
-                          <img [src]="user.picture.medium" alt="user"/>
+                          <img src={{foto}} alt="user"/>
                         </div>
                     </div>
-                    <h2>{{user.name.first + ' ' +user.name.last}}</h2>
+                    <h2>{{nombre}}</h2>
                 </div>
             </li>
             <!-- Sidebar content here -->
