--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,13 @@
-
-
 <div class="navbar bg-secondary text-primary-conten">
     <div class="navbar-start">
         <app-drawer></app-drawer>
-        <a class="normal-case text-xl ml-10">{{fullname ? fullname:
-            'Usuario Anonimo'}}</a>
+        <a class="normal-case text-xl ml-10"></a>
 
     </div>
     <div class="navbar-center">
         <a class=" normal-case text-2xl font-extrabold">{{textNavbar}}</a>
     </div>
-    <div class="navbar-end mr-3">
+    <!--<div class="navbar-end mr-3">
         <div class="tooltip tooltip-left" data-tip="Log Out">
             <a class="btn btn-circle text-lg" routerLink="/login"
                 (click)="logout()">
@@ -18,5 +15,20 @@
             </a>
         </div>
 
+    </div>-->
+    <div class="navbar-end mr-3" >
+        <div class="tooltip tooltip-left dropdown dropdown-end">
+            <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+            <div class="w-10 rounded-full">
+                <img src={{foto}} />
+            </div>
+            </label>
+            <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-52">
+                <li><p>{{correo}}</p></li>
+                <li><p>{{nombre}}</p></li>
+                <li><a routerLink="/login"
+                    (click)="logout()">Logout</a></li>
+            </ul>
+        </div>
     </div>
 </div>
