--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -3,7 +3,7 @@
     <div class="drawer-content">
         <!-- Page content here -->
         <label for="my-drawer" class="btn btn-primary drawer-button text-sm">
-            <i class="fa-solid fa-bars"></i> Drawer
+            <i class="fa-solid fa-bars"></i>
         </label>
     </div>
     <div class="drawer-side">
