--- a/src/app/components/view-pokemon-list/view-pokemon-list.component.html
+++ b/src/app/components/view-pokemon-list/view-pokemon-list.component.html
@@ -2,7 +2,7 @@
 
 <div class="w-4/5 mx-auto flex flex-col items-center content-center">
     <div class="mb-5 mt-2 w-64 flex items-center flex-col">
-        <span class="mb-2">pokemones por pagina: {{pokemonesPorPagina}}</span>
+        <span class="mb-2">Pokemones por pagina: {{pokemonesPorPagina}}</span>
         <input type="range" min="1" max="40"
             [value]="pokemonesPorPagina"
             (input)="handlerChangeRangeValue($event)"
@@ -13,11 +13,12 @@
 
     <!-- TABLA DE POKEMONES -->
     <div class="overflow-x-auto w-3/4 overflow-y-hidden">
-        <table class="table border border-solid border-gray-300">
+        <table class="table border border-solid border-black">
             <!-- head -->
             <thead>
                 <tr>
                     <th>ID</th>
+                    <th>Foto</th>
                     <th>Nombre</th>
                     <th>Tipo</th>
                 </tr>
@@ -37,9 +38,12 @@
                                         alt="Avatar Tailwind CSS Component" />
                                 </div>
                             </div>
-                            <div>
-                                <div class="font-bold">{{p.name}} </div>
-                            </div>
+                            
+                        </div>
+                    </td>
+                    <td>
+                        <div>
+                            <div class="font-bold">{{p.name}} </div>
                         </div>
                     </td>
                     <td>{{getType(p)}}</td>
