--- a/src/app/components/view-registros/view-registros.component.html
+++ b/src/app/components/view-registros/view-registros.component.html
@@ -2,17 +2,26 @@
 
 <div class="w-4/5 mx-auto flex flex-col items-center content-center">
 
+    <div class="mb-5 mt-2 w-64 flex items-center flex-col">
+        <span class="mb-2">Usuarios por pagina: {{usuariosPorPagina}}</span>
+        <input type="range" min="1" max="10"
+            [value]="usuariosPorPagina"
+            (input)="handlerChangeRangeValue($event)"
+            class=" range range-primary range-xs" />
+    </div>
+
     <pagination-controls (pageChange)="paginaActual= $event"></pagination-controls>
 
     <!-- TABLA DE USUARIOS -->
     <div class="overflow-x-auto w-3/4 overflow-y-hidden border-solid">
-        <table class="table">
+        <table class="table border border-solid border-black">
             <!-- head -->
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Phone</th>
+                    <th>Perfil</th>
+                    <th>Nombre</th>
+                    <th>Correo</th>
+                    <th>Teléfono</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,12 +36,12 @@
                                         alt="Avatar Tailwind CSS Component" />
                                 </div>
                             </div>
-                            <div>
-                                <div class="font-bold">{{u.name.first + ' '
-                                    +
-                                    u.name.last}} </div>
-                            </div>
                         </div>
+                    </td>
+                    <td>
+                        <div class="font-bold">{{u.name.first + ' '
+                            +
+                            u.name.last}} </div>
                     </td>
                     <td>
                         {{u.email}}
