--- a/src/app/components/view-registros/view-registros.component.html
+++ b/src/app/components/view-registros/view-registros.component.html
@@ -20,7 +20,7 @@
                 <tr>
                     <th>Perfil</th>
                     <th>Nombre</th>
-                    <th>Correo</th>
+                    <th>Correo electrónico</th>
                     <th>Teléfono</th>
                 </tr>
             </thead>
