--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-secondary text-primary-conten">
+<div class="navbar bg-base-300 text-primary-conten">
     <div class="navbar-start">
         <app-drawer></app-drawer>
         <a class="normal-case text-xl ml-10"></a>
