--- a/src/app/components/view-pokemon-list/view-pokemon-list.component.css
+++ b/src/app/components/view-pokemon-list/view-pokemon-list.component.css
@@ -1,7 +1,7 @@
 th {
     font-size: 15px;
-    background-color: #8dd4d8; 
-    color: #8a0531;
+    background-color: #021431; 
+    color: #fff;
     padding: 10px;
     text-align: left; 
   }
